// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI|AboutPage failed to fetch new version 1`] = `
.emotion-22 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: rgba(255,255,255,1);
  color: #999999;
  height: 40px;
  position: relative;
  overflow: visible;
  overflow-x: visible;
  overflow-y: visible;
  background: rgba(255,255,255,1) linear-gradient(to bottom,transparent calc(100% - 1px),rgba(0,0,0,0.1) calc(100% - 1px));
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2 > * {
  margin-left: 15px;
}

.emotion-1 {
  white-space: nowrap;
  height: 100%;
  padding-bottom: 50px;
  overflow-x: visisble;
  overflow-y: visisble;
}

.emotion-1:first-child {
  margin-left: 0;
}

.emotion-0 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0 15px;
  text-transform: capitalize;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  box-sizing: border-box;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  font-weight: bold;
  color: #1EA7FD;
  border-bottom-color: #1EA7FD;
}

.emotion-0:empty {
  display: none;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 > * {
  margin-right: 15px;
}

.emotion-5 {
  height: 40px;
  background: none;
  color: inherit;
  padding: 0;
  cursor: pointer;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
}

.emotion-5:hover,
.emotion-5:focus {
  outline: 0 none;
  color: #1EA7FD;
}

.emotion-5 > svg {
  width: 15px;
}

.emotion-4 {
  display: block;
}

.emotion-3 {
  fill: currentColor;
}

.emotion-21 {
  display: block;
  position: relative;
  position: relative;
  overflow: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
}

.emotion-19 {
  padding: 20px;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 600px;
  margin: 0 auto;
}

@media screen and (max-width:500px) {
  .emotion-12 {
    display: block;
  }
}

.emotion-11 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-bottom: 20px;
  margin-bottom: 20px;
  border-bottom: 1px solid rgba(0,0,0,0.1);
}

.emotion-8 {
  display: block;
  height: 40px;
  width: auto;
  display: inline-block;
  vertical-align: top;
  margin-right: 10px;
}

.emotion-9 {
  font-size: 30px;
  display: inline-block;
  line-height: 40px;
  font-weight: 700;
}

.emotion-10 {
  background: #DAFFD1;
  color: #4DC533;
  float: right;
  height: 40px;
  box-sizing: border-box;
  padding: 10px 25px;
  border-radius: 20px;
}

@media screen and (max-width:500px) {
  .emotion-10 {
    float: none;
    margin-top: 10px;
    display: block;
    text-align: center;
  }
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-top: 20px;
  margin-top: 20px;
  border-top: 1px solid rgba(0,0,0,0.1);
}

.emotion-17 > * {
  margin-left: 20px;
}

.emotion-17 > *:first-child {
  margin-left: 0;
}

.emotion-14 {
  color: inherit;
}

<div
  class="emotion-22"
>
  <div
    class="emotion-7"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-1"
        role="tablist"
      >
        <button
          class="emotion-0"
          role="tab"
          type="button"
        >
          About
        </button>
      </div>
    </div>
    <div
      class="emotion-6"
    >
      <button
        class="emotion-5"
      >
        <svg
          class="emotion-4"
          height="20px"
          viewBox="0 0 1024 1024"
          width="20px"
        >
          <path
            class="emotion-3"
            d="M693.022 637.866c15.62 15.622 15.618 40.95 0 56.566-15.622 15.622-40.946 15.624-56.562 0.002l-124.46-124.458-124.456 124.458c-15.622 15.622-40.944 15.622-56.562 0-15.624-15.622-15.624-40.946-0.002-56.568l124.454-124.456-124.452-124.45c-15.622-15.622-15.622-40.946 0-56.564 15.62-15.624 40.944-15.624 56.568-0.002l124.45 124.45 124.454-124.452c15.622-15.62 40.95-15.62 56.566 0 15.622 15.62 15.624 40.944 0.002 56.56l-124.456 124.458 124.456 124.456zM828.784 828.784c-174.956 174.956-458.614 174.956-633.566 0-174.958-174.956-174.958-458.614 0-633.566 174.954-174.958 458.612-174.958 633.566 0 174.954 174.952 174.954 458.612 0 633.566zM880 511.998c-0.002-98.296-38.28-190.708-107.786-260.212s-161.92-107.786-260.214-107.788c-98.296 0.002-190.71 38.282-260.216 107.786-69.506 69.508-107.782 161.918-107.786 260.214 0.002 98.296 38.282 190.71 107.786 260.216 69.508 69.506 161.918 107.784 260.216 107.784 98.296 0 190.708-38.278 260.214-107.784s107.784-161.92 107.786-260.216z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="emotion-21"
  >
    <div
      class="emotion-4"
      role="tabpanel"
    >
      <div
        class="emotion-19"
      >
        <div
          class="emotion-12"
        >
          <header
            class="emotion-11"
          >
            <svg
              class="emotion-8"
              viewBox="0 0 420 538"
            >
              <path
                d="M 420,0 28,28 52,520 420,538 Z"
                fill="#f1618c"
              />
              <path
                d="M 324.8652,6.79492 320,72 348.4004,50.5996 372,72 V 3.42774 Z"
                fill="#fff"
              />
              <path
                d="m 230,96.80078 c 67.6,0 106.5996,37.19884 104.5996,111.79882 l -77.4004,2 v -0.1992 c 1.6,-40 -15.7984,-44 -25.3984,-44 -9,0 -24.4004,2.8004 -24.4004,24.4004 0,53.4 131.4004,50.4 131.4004,158 0,60.4 -46.8008,88.39844 -106.8008,88.39844 -62,0 -116.4,-21.19884 -110,-113.79884 h 81 c -1,37.4 7.2008,50.79884 27.8008,50.79884 16,0 23.1992,-8.99844 23.1992,-24.39844 0,-54.8 -129.5996,-56.6 -129.5996,-157 0,-57.6 37.5996,-96 105.5996,-96 z"
                fill="#fff"
              />
              <path
                d="M 42,520 18,28 H 0 l 18,492 z"
                fill="#b57ee5"
              />
            </svg>
            <span
              class="emotion-9"
            >
              Storybook 5.0.0
            </span>
            <span
              class="emotion-10"
            >
              You're up to date
            </span>
          </header>
        </div>
        <div
          class="emotion-12"
        >
          Cannot currently fetch the latest version from Storybook. Try 
          <a
            href="https://github.com/storybooks/storybook/blob/master/CHANGELOG.md"
          >
            reading the full changelog
          </a>
        </div>
        <div
          class="emotion-12"
        >
          <div
            class="emotion-17"
          >
            <a
              class="emotion-14"
              href="https://storybook.js.org"
            >
              Storybook docs
            </a>
            <a
              class="emotion-14"
              href="https://github.com/storybooks/storybook"
            >
              GitHub
            </a>
            <a
              class="emotion-14"
              href="https://storybook.js.org/support"
            >
              Support
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots UI|AboutPage new version required 1`] = `
.emotion-42 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: rgba(255,255,255,1);
  color: #999999;
  height: 40px;
  position: relative;
  overflow: visible;
  overflow-x: visible;
  overflow-y: visible;
  background: rgba(255,255,255,1) linear-gradient(to bottom,transparent calc(100% - 1px),rgba(0,0,0,0.1) calc(100% - 1px));
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2 > * {
  margin-left: 15px;
}

.emotion-1 {
  white-space: nowrap;
  height: 100%;
  padding-bottom: 50px;
  overflow-x: visisble;
  overflow-y: visisble;
}

.emotion-1:first-child {
  margin-left: 0;
}

.emotion-0 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0 15px;
  text-transform: capitalize;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  box-sizing: border-box;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  font-weight: bold;
  color: #1EA7FD;
  border-bottom-color: #1EA7FD;
}

.emotion-0:empty {
  display: none;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 > * {
  margin-right: 15px;
}

.emotion-5 {
  height: 40px;
  background: none;
  color: inherit;
  padding: 0;
  cursor: pointer;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
}

.emotion-5:hover,
.emotion-5:focus {
  outline: 0 none;
  color: #1EA7FD;
}

.emotion-5 > svg {
  width: 15px;
}

.emotion-4 {
  display: block;
}

.emotion-3 {
  fill: currentColor;
}

.emotion-41 {
  display: block;
  position: relative;
  position: relative;
  overflow: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
}

.emotion-39 {
  padding: 20px;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 600px;
  margin: 0 auto;
}

@media screen and (max-width:500px) {
  .emotion-12 {
    display: block;
  }
}

.emotion-11 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-bottom: 20px;
  margin-bottom: 20px;
  border-bottom: 1px solid rgba(0,0,0,0.1);
}

.emotion-8 {
  display: block;
  height: 40px;
  width: auto;
  display: inline-block;
  vertical-align: top;
  margin-right: 10px;
}

.emotion-9 {
  font-size: 30px;
  display: inline-block;
  line-height: 40px;
  font-weight: 700;
}

.emotion-13 {
  width: 160px;
}

.emotion-14 {
  float: right;
  font-weight: normal;
  font-size: 11px;
  color: rgba(0,0,0,0.4);
}

.emotion-37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-top: 20px;
  margin-top: 20px;
  border-top: 1px solid rgba(0,0,0,0.1);
}

.emotion-37 > * {
  margin-left: 20px;
}

.emotion-37 > *:first-child {
  margin-left: 0;
}

.emotion-34 {
  color: inherit;
}

.emotion-10 {
  background: #1EA7FD;
  color: black;
  float: right;
  height: 40px;
  box-sizing: border-box;
  padding: 10px 25px;
  border-radius: 20px;
}

@media screen and (max-width:500px) {
  .emotion-10 {
    float: none;
    margin-top: 10px;
    display: block;
    text-align: center;
  }
}

.emotion-32 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-top: 20px;
  margin-top: 20px;
  border-top: 1px solid rgba(0,0,0,0.1);
}

.emotion-16 {
  color: currentColor;
  font-weight: normal;
  font-family: "Nunito Sans",-apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 0;
  line-height: 1.2em;
  display: block;
  color: #444;
  line-height: 1em;
}

.emotion-16 > sub {
  display: block;
  padding-top: 5px;
  line-height: 1.2em;
  font-size: 14px;
}

.emotion-16 > sub {
  color: rgba(0,0,0,0.4);
}

.emotion-24 {
  position: relative;
  overflow: hidden;
  border: 1px solid rgba(0,0,0,0.1);
  border-radius: 4px;
  background: rgba(255,255,255,1);
}

.emotion-20 {
  position: relative;
  overflow: auto;
}

.emotion-20 code {
  padding-right: 10px;
  opacity: 0.7;
}

.emotion-20 * .token {
  font-family: "Operator Mono","Fira Code Retina","Fira Code","FiraCode-Retina","Andale Mono","Lucida Console",Consolas,Monaco,monospace;
  -webkit-font-smoothing: antialiased;
}

.emotion-20 * .token.comment {
  color: #008000;
  font-style: italic;
}

.emotion-20 * .token.prolog {
  color: #008000;
  font-style: italic;
}

.emotion-20 * .token.doctype {
  color: #008000;
  font-style: italic;
}

.emotion-20 * .token.cdata {
  color: #008000;
  font-style: italic;
}

.emotion-20 * .token.string {
  color: #A31515;
}

.emotion-20 * .token.punctuation {
  color: #393A34;
}

.emotion-20 * .token.operator {
  color: #393A34;
}

.emotion-20 * .token.url {
  color: #36acaa;
}

.emotion-20 * .token.symbol {
  color: #36acaa;
}

.emotion-20 * .token.number {
  color: #36acaa;
}

.emotion-20 * .token.boolean {
  color: #36acaa;
}

.emotion-20 * .token.variable {
  color: #36acaa;
}

.emotion-20 * .token.constant {
  color: #36acaa;
}

.emotion-20 * .token.inserted {
  color: #36acaa;
}

.emotion-20 * .token.atrule {
  color: #0000ff;
}

.emotion-20 * .token.keyword {
  color: #0000ff;
}

.emotion-20 * .token.attr-value {
  color: #0000ff;
}

.emotion-20 * .token.function {
  color: #393A34;
}

.emotion-20 * .token.deleted {
  color: #9a050f;
}

.emotion-20 * .token.important {
  font-weight: bold;
}

.emotion-20 * .token.bold {
  font-weight: bold;
}

.emotion-20 * .token.italic {
  font-style: italic;
}

.emotion-20 * .token.class-name {
  color: #2B91AF;
}

.emotion-20 * .token.tag {
  color: #800000;
}

.emotion-20 * .token.selector {
  color: #800000;
}

.emotion-20 * .token.attr-name {
  color: #ff0000;
}

.emotion-20 * .token.property {
  color: #ff0000;
}

.emotion-20 * .token.regex {
  color: #ff0000;
}

.emotion-20 * .token.entity {
  color: #ff0000;
}

.emotion-20 * .token.directive.tag .tag {
  background: #ffff00;
  color: #393A34;
}

.emotion-20 * .language-json .token.boolean {
  color: #0000ff;
}

.emotion-20 * .language-json .token.number {
  color: #0000ff;
}

.emotion-20 * .language-json .token.property {
  color: #2B91AF;
}

.emotion-20 * .namespace {
  opacity: 0.7;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0;
  padding: 10px;
}

.emotion-18 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-right: 0;
  opacity: 1;
}

.emotion-23 {
  position: absolute;
  bottom: 0;
  right: 0;
  max-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0;
  border-top: 1px solid rgba(0,0,0,0.1);
  border-left: 1px solid rgba(0,0,0,0.1);
  background: rgba(255,255,255,1);
  border-radius: 4px 0 0 0;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  list-style: none;
  padding: 0;
  height: 26px;
  font-size: 11px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  text-transform: uppercase;
  border-left: 0 none;
}

.emotion-21 {
  border: 0 none;
  display: block;
  background: none;
  padding: 0 10px;
  cursor: pointer;
  text-transform: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  font-size: inherit;
  color: inherit;
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
}

.emotion-21:focus {
  border-bottom: 2px solid #1EA7FD;
  outline: 0 none;
}

<div
  class="emotion-42"
>
  <div
    class="emotion-7"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-1"
        role="tablist"
      >
        <button
          class="emotion-0"
          role="tab"
          type="button"
        >
          About
        </button>
      </div>
    </div>
    <div
      class="emotion-6"
    >
      <button
        class="emotion-5"
      >
        <svg
          class="emotion-4"
          height="20px"
          viewBox="0 0 1024 1024"
          width="20px"
        >
          <path
            class="emotion-3"
            d="M693.022 637.866c15.62 15.622 15.618 40.95 0 56.566-15.622 15.622-40.946 15.624-56.562 0.002l-124.46-124.458-124.456 124.458c-15.622 15.622-40.944 15.622-56.562 0-15.624-15.622-15.624-40.946-0.002-56.568l124.454-124.456-124.452-124.45c-15.622-15.622-15.622-40.946 0-56.564 15.62-15.624 40.944-15.624 56.568-0.002l124.45 124.45 124.454-124.452c15.622-15.62 40.95-15.62 56.566 0 15.622 15.62 15.624 40.944 0.002 56.56l-124.456 124.458 124.456 124.456zM828.784 828.784c-174.956 174.956-458.614 174.956-633.566 0-174.958-174.956-174.958-458.614 0-633.566 174.954-174.958 458.612-174.958 633.566 0 174.954 174.952 174.954 458.612 0 633.566zM880 511.998c-0.002-98.296-38.28-190.708-107.786-260.212s-161.92-107.786-260.214-107.788c-98.296 0.002-190.71 38.282-260.216 107.786-69.506 69.508-107.782 161.918-107.786 260.214 0.002 98.296 38.282 190.71 107.786 260.216 69.508 69.506 161.918 107.784 260.216 107.784 98.296 0 190.708-38.278 260.214-107.784s107.784-161.92 107.786-260.216z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="emotion-41"
  >
    <div
      class="emotion-4"
      role="tabpanel"
    >
      <div
        class="emotion-39"
      >
        <div
          class="emotion-12"
        >
          <header
            class="emotion-11"
          >
            <svg
              class="emotion-8"
              viewBox="0 0 420 538"
            >
              <path
                d="M 420,0 28,28 52,520 420,538 Z"
                fill="#f1618c"
              />
              <path
                d="M 324.8652,6.79492 320,72 348.4004,50.5996 372,72 V 3.42774 Z"
                fill="#fff"
              />
              <path
                d="m 230,96.80078 c 67.6,0 106.5996,37.19884 104.5996,111.79882 l -77.4004,2 v -0.1992 c 1.6,-40 -15.7984,-44 -25.3984,-44 -9,0 -24.4004,2.8004 -24.4004,24.4004 0,53.4 131.4004,50.4 131.4004,158 0,60.4 -46.8008,88.39844 -106.8008,88.39844 -62,0 -116.4,-21.19884 -110,-113.79884 h 81 c -1,37.4 7.2008,50.79884 27.8008,50.79884 16,0 23.1992,-8.99844 23.1992,-24.39844 0,-54.8 -129.5996,-56.6 -129.5996,-157 0,-57.6 37.5996,-96 105.5996,-96 z"
                fill="#fff"
              />
              <path
                d="M 42,520 18,28 H 0 l 18,492 z"
                fill="#b57ee5"
              />
            </svg>
            <span
              class="emotion-9"
            >
              Storybook 5.0.0
            </span>
            <span
              class="emotion-10"
            >
              Update available
            </span>
          </header>
        </div>
        <div
          class="emotion-12"
        >
          <aside
            class="emotion-13"
          >
            <div>
              Latest version
            </div>
            <div>
              <strong>
                5.0.3
              </strong>
            </div>
          </aside>
          <ul>
            <li>
              upgrade webpack & babel to latest
            </li>
            <li>
              new addParameters and third argument to .add to pass data to addons
            </li>
            <li>
              added the ability to theme storybook
            </li>
            <li>
              improved ui for mobile devices
            </li>
            <li>
              improved performance of addon-knobs
            </li>
          </ul>
          <a
            class="emotion-14"
            href="https://github.com/storybooks/storybook/blob/master/CHANGELOG.md"
            rel="noopener noreferrer"
            target="_blank"
          >
            Read full changelog
          </a>
        </div>
        <div
          class="emotion-12"
        >
          <div
            class="emotion-32"
          >
            <header
              class="emotion-17"
            >
              <h1
                class="emotion-16"
              >
                <span>
                  Upgrade all storybook packages to latest:
                </span>
              </h1>
            </header>
            <div
              class="emotion-24"
            >
              <div
                class="emotion-20"
              >
                <pre
                  class="hljs emotion-19"
                >
                  <code
                    class="emotion-18"
                  >
                    npx npm-check-updates 
                    <span
                      class="token string"
                    >
                      '/storybook/'
                    </span>
                     -u 
                    <span
                      class="token operator"
                    >
                      &&
                    </span>
                     yarn
                  </code>
                </pre>
              </div>
              <ul
                class="emotion-23"
              >
                <li
                  class="emotion-22"
                >
                  <button
                    class="emotion-21"
                  >
                    copy
                  </button>
                </li>
              </ul>
            </div>
            <p>
              Alternatively if you're using a yarn you could run the following command, and check all storybook related packages:
            </p>
            <div
              class="emotion-24"
            >
              <div
                class="emotion-20"
              >
                <pre
                  class="hljs emotion-19"
                >
                  <code
                    class="emotion-18"
                  >
                    yarn upgrade-interactive --latest
                  </code>
                </pre>
              </div>
              <ul
                class="emotion-23"
              >
                <li
                  class="emotion-22"
                >
                  <button
                    class="emotion-21"
                  >
                    copy
                  </button>
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          class="emotion-12"
        >
          <div
            class="emotion-37"
          >
            <a
              class="emotion-34"
              href="https://storybook.js.org"
            >
              Storybook docs
            </a>
            <a
              class="emotion-34"
              href="https://github.com/storybooks/storybook"
            >
              GitHub
            </a>
            <a
              class="emotion-34"
              href="https://storybook.js.org/support"
            >
              Support
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots UI|AboutPage up to date 1`] = `
.emotion-24 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: rgba(255,255,255,1);
  color: #999999;
  height: 40px;
  position: relative;
  overflow: visible;
  overflow-x: visible;
  overflow-y: visible;
  background: rgba(255,255,255,1) linear-gradient(to bottom,transparent calc(100% - 1px),rgba(0,0,0,0.1) calc(100% - 1px));
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2 > * {
  margin-left: 15px;
}

.emotion-1 {
  white-space: nowrap;
  height: 100%;
  padding-bottom: 50px;
  overflow-x: visisble;
  overflow-y: visisble;
}

.emotion-1:first-child {
  margin-left: 0;
}

.emotion-0 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0 15px;
  text-transform: capitalize;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  box-sizing: border-box;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  font-weight: bold;
  color: #1EA7FD;
  border-bottom-color: #1EA7FD;
}

.emotion-0:empty {
  display: none;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 > * {
  margin-right: 15px;
}

.emotion-5 {
  height: 40px;
  background: none;
  color: inherit;
  padding: 0;
  cursor: pointer;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
}

.emotion-5:hover,
.emotion-5:focus {
  outline: 0 none;
  color: #1EA7FD;
}

.emotion-5 > svg {
  width: 15px;
}

.emotion-4 {
  display: block;
}

.emotion-3 {
  fill: currentColor;
}

.emotion-23 {
  display: block;
  position: relative;
  position: relative;
  overflow: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
}

.emotion-21 {
  padding: 20px;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 600px;
  margin: 0 auto;
}

@media screen and (max-width:500px) {
  .emotion-12 {
    display: block;
  }
}

.emotion-11 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-bottom: 20px;
  margin-bottom: 20px;
  border-bottom: 1px solid rgba(0,0,0,0.1);
}

.emotion-8 {
  display: block;
  height: 40px;
  width: auto;
  display: inline-block;
  vertical-align: top;
  margin-right: 10px;
}

.emotion-9 {
  font-size: 30px;
  display: inline-block;
  line-height: 40px;
  font-weight: 700;
}

.emotion-10 {
  background: #DAFFD1;
  color: #4DC533;
  float: right;
  height: 40px;
  box-sizing: border-box;
  padding: 10px 25px;
  border-radius: 20px;
}

@media screen and (max-width:500px) {
  .emotion-10 {
    float: none;
    margin-top: 10px;
    display: block;
    text-align: center;
  }
}

.emotion-13 {
  width: 160px;
}

.emotion-14 {
  float: right;
  font-weight: normal;
  font-size: 11px;
  color: rgba(0,0,0,0.4);
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-top: 20px;
  margin-top: 20px;
  border-top: 1px solid rgba(0,0,0,0.1);
}

.emotion-19 > * {
  margin-left: 20px;
}

.emotion-19 > *:first-child {
  margin-left: 0;
}

.emotion-16 {
  color: inherit;
}

<div
  class="emotion-24"
>
  <div
    class="emotion-7"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-1"
        role="tablist"
      >
        <button
          class="emotion-0"
          role="tab"
          type="button"
        >
          About
        </button>
      </div>
    </div>
    <div
      class="emotion-6"
    >
      <button
        class="emotion-5"
      >
        <svg
          class="emotion-4"
          height="20px"
          viewBox="0 0 1024 1024"
          width="20px"
        >
          <path
            class="emotion-3"
            d="M693.022 637.866c15.62 15.622 15.618 40.95 0 56.566-15.622 15.622-40.946 15.624-56.562 0.002l-124.46-124.458-124.456 124.458c-15.622 15.622-40.944 15.622-56.562 0-15.624-15.622-15.624-40.946-0.002-56.568l124.454-124.456-124.452-124.45c-15.622-15.622-15.622-40.946 0-56.564 15.62-15.624 40.944-15.624 56.568-0.002l124.45 124.45 124.454-124.452c15.622-15.62 40.95-15.62 56.566 0 15.622 15.62 15.624 40.944 0.002 56.56l-124.456 124.458 124.456 124.456zM828.784 828.784c-174.956 174.956-458.614 174.956-633.566 0-174.958-174.956-174.958-458.614 0-633.566 174.954-174.958 458.612-174.958 633.566 0 174.954 174.952 174.954 458.612 0 633.566zM880 511.998c-0.002-98.296-38.28-190.708-107.786-260.212s-161.92-107.786-260.214-107.788c-98.296 0.002-190.71 38.282-260.216 107.786-69.506 69.508-107.782 161.918-107.786 260.214 0.002 98.296 38.282 190.71 107.786 260.216 69.508 69.506 161.918 107.784 260.216 107.784 98.296 0 190.708-38.278 260.214-107.784s107.784-161.92 107.786-260.216z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="emotion-23"
  >
    <div
      class="emotion-4"
      role="tabpanel"
    >
      <div
        class="emotion-21"
      >
        <div
          class="emotion-12"
        >
          <header
            class="emotion-11"
          >
            <svg
              class="emotion-8"
              viewBox="0 0 420 538"
            >
              <path
                d="M 420,0 28,28 52,520 420,538 Z"
                fill="#f1618c"
              />
              <path
                d="M 324.8652,6.79492 320,72 348.4004,50.5996 372,72 V 3.42774 Z"
                fill="#fff"
              />
              <path
                d="m 230,96.80078 c 67.6,0 106.5996,37.19884 104.5996,111.79882 l -77.4004,2 v -0.1992 c 1.6,-40 -15.7984,-44 -25.3984,-44 -9,0 -24.4004,2.8004 -24.4004,24.4004 0,53.4 131.4004,50.4 131.4004,158 0,60.4 -46.8008,88.39844 -106.8008,88.39844 -62,0 -116.4,-21.19884 -110,-113.79884 h 81 c -1,37.4 7.2008,50.79884 27.8008,50.79884 16,0 23.1992,-8.99844 23.1992,-24.39844 0,-54.8 -129.5996,-56.6 -129.5996,-157 0,-57.6 37.5996,-96 105.5996,-96 z"
                fill="#fff"
              />
              <path
                d="M 42,520 18,28 H 0 l 18,492 z"
                fill="#b57ee5"
              />
            </svg>
            <span
              class="emotion-9"
            >
              Storybook 5.0.0
            </span>
            <span
              class="emotion-10"
            >
              You're up to date
            </span>
          </header>
        </div>
        <div
          class="emotion-12"
        >
          <aside
            class="emotion-13"
          >
            <div>
              Latest version
            </div>
            <div>
              <strong>
                5.0.0
              </strong>
            </div>
          </aside>
          <ul>
            <li>
              upgrade webpack & babel to latest
            </li>
            <li>
              new addParameters and third argument to .add to pass data to addons
            </li>
            <li>
              added the ability to theme storybook
            </li>
            <li>
              improved ui for mobile devices
            </li>
            <li>
              improved performance of addon-knobs
            </li>
          </ul>
          <a
            class="emotion-14"
            href="https://github.com/storybooks/storybook/blob/master/CHANGELOG.md"
            rel="noopener noreferrer"
            target="_blank"
          >
            Read full changelog
          </a>
        </div>
        <div
          class="emotion-12"
        >
          <div
            class="emotion-19"
          >
            <a
              class="emotion-16"
              href="https://storybook.js.org"
            >
              Storybook docs
            </a>
            <a
              class="emotion-16"
              href="https://github.com/storybooks/storybook"
            >
              GitHub
            </a>
            <a
              class="emotion-16"
              href="https://storybook.js.org/support"
            >
              Support
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
